[package]
name = "penrose-rs"
version = "0.1.0"
authors = ["Peter Aarestad <aarestad@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7" }
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
] }
